--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main></main>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Three.js</a></li>
+          <li><a href="#">Twitter</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1>LensFlares Website</h1>
+      <h3>Dive into another skill</h3>
+    </main>
     <script src="script.js" type="module"></script>
   </body>
 </html>
